[package]
name = "mieql"
version = "0.1.0"
authors = ["R. Miles McCain <0@rmrm.io>"]
edition = "2018"

[dependencies]
ieql = "0.2.0"
rusoto_core = "0.36.0"
rusoto_s3 = "0.36.0"
clap = "2.32"
log = "0.4"
env_logger = "0.6.0"
hyper = "0.12.21"
ron = "0.4"
futures = "0.1.25"
reqwest = "0.9.8"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
warc_parser = "1.0.1"
nom = "2.0"
httparse = "1.3.3"
sys-info = "0.5.6"