[package]
name = "mieql"
version = "0.1.0"
authors = ["R. Miles McCain <0@rmrm.io>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "mieql"

[dependencies]
ieql = "0.2.8"
rusoto_core = "0.42.0"
rusoto_s3 = "0.42.0"
clap = "2.33"
log = "0.4"
env_logger = "0.7"
hyper = "0.13"
ron = "0.5"
futures = "0.1"
reqwest = "0.9"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
warc_parser = "1.0"
nom = "2.0"
httparse = "1.3"
sys-info = "0.5"
serde_json = "1.0"